backend/deployment/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gomonitor
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: gomonitor-webhook
  namespace: gomonitor
  labels:
    app: gomonitor-manager
webhooks:
  - name: monitor.online.daq.ihep
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    # enable the example below to limit to namespaces with specific labels only
    # namespaceSelector:
    #   matchLabels:
    #     controller: gomonitor
    clientConfig:
      service:
        name: gomonitor-manager
        namespace: gomonitor
        path: "/mutate-v1-pod"
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR2RENDQXFTZ0F3SUJBZ0lVVnY4TGloUjQ5ZTJzRFdOcmVPOVhKWGhLZU9rd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1pERUxNQWtHQTFVRUJoTUNRMDR4RHpBTkJnTlZCQWdUQms5eVpXZHZiakVRTUE0R0ExVUVCeE1IUW1WcAphbWx1WnpFVE1CRUdBMVVFQ2hNS1MzVmlaWEp1WlhSbGN6RUxNQWtHQTFVRUN4TUNRMEV4RURBT0JnTlZCQU1UCkIzZGxZbWh2YjJzd0hoY05NakV3TmpBME1ETXhOREF3V2hjTk1qWXdOakF6TURNeE5EQXdXakJrTVFzd0NRWUQKVlFRR0V3SkRUakVQTUEwR0ExVUVDQk1HVDNKbFoyOXVNUkF3RGdZRFZRUUhFd2RDWldscWFXNW5NUk13RVFZRApWUVFLRXdwTGRX [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["pods"]
    failurePolicy: Ignore
    reinvocationPolicy: IfNeeded
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-gomonitor-backend
  namespace: kube-gomonitor
spec:
  selector:
    matchLabels:
      app: kube-gomonitor-backend
  template:
    metadata:
      labels:
        app: kube-gomonitor-backend
    spec:
      containers:
      - name: kube-gomonitor-backend
        image: 1445277435/kube-gomonitor-backend:v0.0.1
        imagePullPolicy: Always
        resources:
          request:
            cpu: 100m
            memory: 128M
          limits:
            cpu: 500m
            memory: 512M
        volumeMounts:
          - name: certs
            readOnly: true
            mountPath: "/etc/certs"
      volumes:
      - name: certs
        secret:
          secretName: gomonitor-certs
---
apiVersion: v1
kind: Service
metadata:
  name: kube-gomonitor-backend
  namespace: gomonitor
spec:
  selector:
    app: kube-gomonitor-backend
  ports:
  - protocol: TCP
    port: 443
    targetPort: 9443
